--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "mongoose": "^8.16.4",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
